Webpack replaced with Esbuild, devex improvements

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<link rel="manifest" href="/manifest.webmanifest">
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-	<script src="./tableaunoir.js"></script>
+	<script type="module" src="tableaunoir.js"></script>
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
