--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="manifest" href="/manifest.webmanifest">
 	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 	<script type="module" src="tableaunoir.js"></script>
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -629,8 +632,13 @@
 			</div>
 			<div id="Share" class="tabcontent">
 
-				<div id="sharePrivacyExplanation">For privacy reasons, this board is <em>not stored</em> on the server.
-					Save it on your device at the end of the session if needed.</div>
+				<div id="sharePrivacyExplanation" class="warningBox">
+					<img src="img/icons/warning.svg" alt="Warning triangle" />
+					<span>
+						For privacy reasons the board is <em>not</em> stored on the server.
+						Save it on your device at the end of the session if needed.
+					</span>
+				</div>
 
 
 
@@ -642,26 +650,21 @@
 						id="qrcode">
 				</div>
 
-				<h2>Pseudo</h2>
-				<div>
-					<input id="inputUserName" maxlength="20" />
-				</div>
-
 				<div id="shareAndJoin">
-
-					<h2>Make a shared board</h2>
-					<img align="right" class="illustration" height="96px" src="img/illustrations/share.png" />
-					<div>
-						<span>🔑</span><label for="password">Password (optional):</label> <input type="password"
-							id="password" />
-						<button id="shareButton">Make a shared board</button>
-						<div id="sharePasswordExplanation">
-							The <em>password</em> makes you keep your sharer privileges. If no password is set, all
-							participants
-							will have full privileges.</div>
+					<div id="shareAndJoin">
+						<div class="spread">
+							<span>Screen name</span>
+							<input type="text" id="inputUserName" maxlength="20" />
+						</div>
+	
+						<div class="spread">
+							<span>Password</span>
+							<input type="password" id="password" />
+						</div>
+						<button id="shareButton">Create shared board</button>
 					</div>
 
-					<br />
+
 					<div id="join">
 						<h2>Join an existing board</h2>
 						<img align="right" class="illustration" height="96px" src="img/illustrations/join.png" />
