--- a/src/index.html
+++ b/src/index.html
@@ -651,30 +651,32 @@
 				</div>
 
 				<div id="shareAndJoin">
-					<div id="shareAndJoin">
-						<div class="spread">
-							<span>Screen name</span>
-							<input type="text" id="inputUserName" maxlength="20" />
-						</div>
-	
-						<div class="spread">
-							<span>Password</span>
-							<input type="password" id="password" />
-						</div>
-						<button id="shareButton">Create shared board</button>
-					</div>
+					<section class="shareSection">
+            <div class="optionsGrid">
+              <span>Screen name</span>
+              <input type="text" id="inputUserName" maxlength="20" />
+
+              <span>Restrict editing</span>
+              <label class="switch">
+                <input type="checkbox" checked>
+                <span class="slider"></span>
+              </label>
+
+              <span>Password</span>
+              <input type="password" id="password" />
+            </div>
+            <button id="shareButton" class="actionButton">Create shared board</button>
+		      </section>
 
 
-					<div id="join">
-						<h2>Join an existing board</h2>
-						<img align="right" class="illustration" height="96px" src="img/illustrations/join.png" />
-						<div>
-							<div id="shareJoinExplanation">
-								In order to <em>join</em> an existing shared board, type its URL:</div>
-							<input id="joinUrl" value="" />
-							<button id="joinButton">Join</button>
-						</div>
-					</div>
+			    <section id="join" class="shareSection">
+            <span>Join an existing board</span>
+            <div>
+              <input id="joinUrl" type="text" />
+              <button id="joinButton">Join</button>
+            </div>
+					</section>
+
 				</div>
 
 				<div hidden class="visibleIfShared">
